# Raym0nade

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  fxaa.cpp  main.cpp
docs/: renderArguments.txt
include/: bvh.h  component.h  gen.h  geometry.h  image.h  kdt.h  material.h  model.h  myconsole.h  octree.h  render.h  sampling.h  sobel.h  texture.h  window_manager.h
include/disney/: Fresnel.h  disney.h  utils.h
scripts/: dds_to_array.py  hdr_to_array.py
src/: bvh.cpp  component.cpp  fxaa.cpp  gen.cpp  geometry.cpp  image.cpp  kdt.cpp  main.cpp  material.cpp  model.cpp  myconsole.cpp  octree.cpp  render.cpp  sampling.cpp  sobel.cpp  texture.cpp  window_manager.cpp
src/disney/: Fresnel.cpp  disney.cpp  utils.cpp
